--- a/themes/kmom02/incl/header.twig
+++ b/themes/kmom02/incl/header.twig
@@ -15,5 +15,11 @@
     {% endif %}
 
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" media="all" >
+
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" media="screen" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" media="screen" />
+    {% endif %}
+
 </head>
