--- a/themes/kmom02/incl/nav.twig
+++ b/themes/kmom02/incl/nav.twig
@@ -9,10 +9,10 @@
             </div>
             {% endif %}
             <div class="title{{ pages["_meta"].meta.tagline ? ' tagline' }}">
-                <a href="{{ base_url }}">
+                {# <a href="{{ base_url }}"> #}
                     <h1>{{ site_title }}</h1>
                     {{ pages["_meta"].meta.tagline|markdown }}
-                </a>
+                {# </a> #}
             </div>
         </div>
         <a class="nav-toggle" id="nav-toggle" title="Toggle Menu" role="button" aria-controls="nav" aria-expanded="false">
