--- a/themes/kmom02/report.twig
+++ b/themes/kmom02/report.twig
@@ -4,7 +4,7 @@
     {% include 'incl/nav.twig' %}
 
     <div class="main" role="main">
-        <div class="container landingpage">
+        <div class="container report">
             {{ content }}
         </div>
     </div>
