--- a/themes/kmom02/reports.twig
+++ b/themes/kmom02/reports.twig
@@ -4,9 +4,10 @@
     {% include 'incl/nav.twig' %}
 
     <div class="main" role="main">
-        <div class="container landingpage">
+        <div class="container reports">
             {{ content }}
         </div>
+
     </div>
 
     {% include 'incl/footer.twig' %}
