--- a/themes/kmom02/scss/components/_technology.scss
+++ b/themes/kmom02/scss/components/_technology.scss
@@ -1,9 +1,16 @@
 /* technology.scss */
-
+/* $theme: 'light' !default; */
+@use 'sass:map';
 @use 'sass:list';
-@use 'sass:color';
-@use 'variables' as vars;
-@use 'mixins' as mix;
+@use '../_settings/' as settings;
+@use '../mixins/' as mix;
+
+
+$box-colors: map.get(settings.$colors, 'box-colors');
+$box-hover-lightness: map.get(settings.$colors, 'box-hover-lightness');
+$box-font-color: map.get(settings.$colors, 'font-color');
+$box-font-color-hover: map.get(settings.$colors, 'box-hover-font-color');
+
 
 .landingpage {
     display: grid;
@@ -28,20 +35,25 @@
         height: 100%;
         @include mix.flex-center;
         @include  mix.box-border;
-        color: vars.$font-color;
+        color: $box-font-color;
         font-size: 2rem;
         text-decoration: none;
-        font-family: vars.$label-font;
+        font-family: map.get(settings.$fonts, 'label-font');
         padding: 0.5rem;
         word-break: break-all;
         text-align: center;
     }
+
+    a:hover {
+        color: $box-font-color-hover;
+    }
 }
 
 /** set box links background and hover color  */
-@for $i from 1 through length(vars.$box-colors) {
-    .box:nth-child(#{$i + 1}) {
-        @include mix.link-styling($i, 20%);
+@for $i from 1 through 7 {
+    $color-index: ($i % list.length($box-colors)+1);
+    .box:nth-child(#{$i+1}) {
+        @include mix.link-styling($color-index, $box-hover-lightness);
     }
 }
 
@@ -57,8 +69,6 @@
 .row2 {
     grid-row: span 2;
 }
-
-
 
 .technology {
     display: grid;
@@ -79,14 +89,14 @@
     grid-area: sidebar;
     margin: 0;
     padding: 1rem;
-    border-right: vars.$border-light-grey;
+    border-right: map.get(settings.$borders, 'border-light-grey');
     line-height: 3rem;
 
     a {
         @include mix.flex-center;
         @include  mix.box-border;
-        font-family: vars.$label-font;
-        color: vars.$font-color;
+        font-family: map.get(settings.$fonts, 'label-font');
+        color: map.get(settings.$colors, 'font-color');
         text-decoration: none;
         font-size: 1.1rem;
         padding: 0.5rem;
@@ -95,15 +105,16 @@
     }
 
     a:hover {
-        color: vars.$hover-box;
+        color: map.get(settings.$colors, 'hover-box');
     }
 }
 
 
 /** set links background and hover color  */
-@for $i from 1 through length(vars.$box-colors) {
+@for $i from 1 through 10 {
+    $color-index: ($i % list.length($box-colors)) + 1;
     .techlink:nth-child(#{$i}) {
-        @include mix.link-styling($i, 20%);
+        @include mix.link-styling($color-index, 20%);
     }
 }
 
