Added color report

--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6430,7 +6430,7 @@ readers do not read off random characters that represent icons */
   border: 0 none;
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", serif;
 }
 
 html, body {
@@ -6444,11 +6444,17 @@ p, td, th, li, dd {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #333;
+  color: #111;
   margin-bottom: 0.6em;
   font-weight: bold;
   font-family: "Titillium Web";
   letter-spacing: 0.2rem;
+}
+
+hr {
+  padding: 1pt;
+  background-color: #999;
+  margin: 2rem 0;
 }
 
 .header {
@@ -6468,8 +6474,10 @@ p {
 
 ol, ul {
   padding-left: 1.5em;
-  margin-bottom: 1rem ul;
-  margin-bottom-list-style-type: disclosure-closed;
+  margin-bottom: 1rem;
+}
+ol ul, ul ul {
+  list-style-type: disclosure-closed;
 }
 
 .hidden {
@@ -6486,7 +6494,11 @@ body {
   line-height: 1.4;
 }
 body a {
-  color: #026E81;
+  color: #3C6975;
+}
+
+img {
+  max-width: 100%;
 }
 
 .main {
@@ -6498,7 +6510,7 @@ body a {
 }
 .main a:hover {
   color: #fff;
-  background-color: #f93;
+  background-color: #2F98B5;
   text-decoration: none;
 }
 .main .me {
@@ -6507,6 +6519,16 @@ body a {
   margin: 1rem 0;
   border: 1px solid #333;
   max-width: 100%;
+}
+
+.colors table {
+  background-color: transparent;
+  border-spacing: 4px;
+  border-collapse: separate;
+}
+.colors td {
+  border: 0;
+  height: 50px;
 }
 
 @media (max-width: 500px) {
@@ -6524,8 +6546,8 @@ body a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 1px solid #026E81;
-  background-color: #026E81;
+  border-top: 1px solid #A06A37;
+  background-color: #A06A37;
   color: #fff;
   padding: 0.5rem 1rem;
 }
@@ -6535,9 +6557,10 @@ body a {
   padding: 0.5rem;
 }
 .footer a:hover {
-  color: #00ABBD;
+  color: #A06A37;
 }
-.footer .social {
+
+.social {
   font-size: 1.5rem;
 }
 
@@ -6550,7 +6573,7 @@ body a {
   display: flex;
   justify-content: space-between;
   align-items: normal;
-  background-color: #026E81;
+  background-color: #3C6975;
 }
 .header .title, .header .logo {
   padding: 1rem;
@@ -6561,6 +6584,9 @@ body a {
 .header a {
   color: #fff;
   text-decoration: none;
+}
+.header a:hover {
+  color: #2F98B5;
 }
 .header img {
   width: 100px;
@@ -6635,10 +6661,6 @@ blockquote {
 .nav ul li {
   padding: 0 1em;
 }
-.nav a:hover {
-  color: #00ABBD;
-}
-
 .nav-toggle {
   display: none;
 }
@@ -6688,7 +6710,7 @@ table {
 }
 
 th {
-  background-color: #f93;
+  background-color: #f99428;
   text-align: left;
   padding: 0.5rem;
   font-family: "Titillium Web";
@@ -6696,7 +6718,7 @@ th {
 }
 
 td {
-  border: 1px solid #f93;
+  border: 1px solid #f99428;
   padding: 0.5rem;
 }
 
@@ -6747,52 +6769,59 @@ tr:nth-child(even) {
 
 /** set box links background and hover color  */
 .box:nth-child(2) a {
-  background-color: #00ABBD;
+  background-color: #3C6975;
+  color: #b3cda0;
 }
 .box:nth-child(2) a:hover {
-  background-color: #00e5fd;
+  background-color: #5391a1;
 }
 
 .box:nth-child(3) a {
-  background-color: #09d;
+  background-color: #37a6a2;
+  color: #baf7fd;
 }
 .box:nth-child(3) a:hover {
-  background-color: #18b8ff;
+  background-color: #51c5c1;
 }
 
 .box:nth-child(4) a {
-  background-color: #f93;
+  background-color: #f99428;
+  color: #4F351D;
 }
 .box:nth-child(4) a:hover {
-  background-color: #ffad5c;
+  background-color: #faa953;
 }
 
 .box:nth-child(5) a {
-  background-color: #A1C7E0;
+  background-color: #2F98B5;
+  color: #b3d6b1;
 }
 .box:nth-child(5) a:hover {
-  background-color: #b4d2e6;
+  background-color: #4cb4d0;
 }
 
 .box:nth-child(6) a {
-  background-color: #026E81;
+  background-color: #A06A37;
+  color: #c5f3da;
 }
 .box:nth-child(6) a:hover {
-  background-color: #03aecc;
+  background-color: #c3874f;
 }
 
 .box:nth-child(7) a {
-  background-color: #00ABBD;
+  background-color: #3C6975;
+  color: #b3cda0;
 }
 .box:nth-child(7) a:hover {
-  background-color: #00e5fd;
+  background-color: #5391a1;
 }
 
 .box:nth-child(8) a {
-  background-color: #09d;
+  background-color: #37a6a2;
+  color: #baf7fd;
 }
 .box:nth-child(8) a:hover {
-  background-color: #18b8ff;
+  background-color: #51c5c1;
 }
 
 .col2 {
@@ -6850,73 +6879,83 @@ tr:nth-child(even) {
 
 /** set links background and hover color  */
 .techlink:nth-child(1) a {
-  background-color: #00ABBD;
+  background-color: #3C6975;
+  color: #b3cda0;
 }
 .techlink:nth-child(1) a:hover {
-  background-color: #00e5fd;
+  background-color: #5391a1;
 }
 
 .techlink:nth-child(2) a {
-  background-color: #09d;
+  background-color: #37a6a2;
+  color: #baf7fd;
 }
 .techlink:nth-child(2) a:hover {
-  background-color: #18b8ff;
+  background-color: #51c5c1;
 }
 
 .techlink:nth-child(3) a {
-  background-color: #f93;
+  background-color: #f99428;
+  color: #4F351D;
 }
 .techlink:nth-child(3) a:hover {
-  background-color: #ffad5c;
+  background-color: #faa953;
 }
 
 .techlink:nth-child(4) a {
-  background-color: #A1C7E0;
+  background-color: #2F98B5;
+  color: #b3d6b1;
 }
 .techlink:nth-child(4) a:hover {
-  background-color: #b4d2e6;
+  background-color: #4cb4d0;
 }
 
 .techlink:nth-child(5) a {
-  background-color: #026E81;
+  background-color: #A06A37;
+  color: #c5f3da;
 }
 .techlink:nth-child(5) a:hover {
-  background-color: #03aecc;
+  background-color: #c3874f;
 }
 
 .techlink:nth-child(6) a {
-  background-color: #00ABBD;
+  background-color: #3C6975;
+  color: #b3cda0;
 }
 .techlink:nth-child(6) a:hover {
-  background-color: #00e5fd;
+  background-color: #5391a1;
 }
 
 .techlink:nth-child(7) a {
-  background-color: #09d;
+  background-color: #37a6a2;
+  color: #baf7fd;
 }
 .techlink:nth-child(7) a:hover {
-  background-color: #18b8ff;
+  background-color: #51c5c1;
 }
 
 .techlink:nth-child(8) a {
-  background-color: #f93;
+  background-color: #f99428;
+  color: #4F351D;
 }
 .techlink:nth-child(8) a:hover {
-  background-color: #ffad5c;
+  background-color: #faa953;
 }
 
 .techlink:nth-child(9) a {
-  background-color: #A1C7E0;
+  background-color: #2F98B5;
+  color: #b3d6b1;
 }
 .techlink:nth-child(9) a:hover {
-  background-color: #b4d2e6;
+  background-color: #4cb4d0;
 }
 
 .techlink:nth-child(10) a {
-  background-color: #026E81;
+  background-color: #A06A37;
+  color: #c5f3da;
 }
 .techlink:nth-child(10) a:hover {
-  background-color: #03aecc;
+  background-color: #c3874f;
 }
 
 @media (max-width: 600px) {
@@ -6944,27 +6983,6 @@ tr:nth-child(even) {
     display: none;
   }
 }
-/** base.scss */
-/* report.scss */
-.reports {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f93;
-  border-radius: 10px;
-  border: 1px solid #333;
-}
-.reports a {
-  color: #333;
-  text-decoration: none;
-  letter-spacing: 0.3rem;
-  padding: 0.5rem;
-}
-.reports a:hover {
-  background-color: #f57a00;
-  color: #333;
-}
-
 /* @use 'components' as comp with (
     $theme: 'light'
 );
