--- a/themes/kmom02/incl/header.twig
+++ b/themes/kmom02/incl/header.twig
@@ -17,9 +17,9 @@
     <link rel="icon" href="{{ theme_url }}/../shared/img/favicon.ico">
 
     {% if config.session.theme == "dark" %}
-        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.min.css" type="text/css" media="screen" />
     {% else %}
-        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.min.css" type="text/css" media="screen" />
     {% endif %}
 
 </head>
