--- a/themes/kmom02/scss/components/_comps.scss
+++ b/themes/kmom02/scss/components/_comps.scss
@@ -6,4 +6,4 @@
 @use 'mobile-menu';// as mobile-menu with ($theme: $theme);
 @use 'table';// as table with ($theme: $theme);
 @use 'technology';// as tech with ($theme: $theme);
-@use 'report';// as report with ($theme: $theme);
+//@use 'report';// as report with ($theme: $theme);
