--- a/themes/kmom02/scss/components/_footer.scss
+++ b/themes/kmom02/scss/components/_footer.scss
@@ -10,7 +10,7 @@
 
     @include mix.fixed-padding-and-no-growth;
     @include mix.flex-container;
-    border-top: 1px solid map.get(settings.$colors, 'background-footer-color');
+    border-top: 1px solid map.get(settings.$colors, 'footer-border-color');
     background-color:  map.get(settings.$colors, 'background-footer-color');
     color: map.get(settings.$colors, 'font-color-footer');
     padding: 0.5rem 1rem;
@@ -21,12 +21,12 @@
     }
 
     a:hover {
-        color: map.get(settings.$colors, 'header-footer-hover-color');
+        color: map.get(settings.$colors, 'footer-hover-color');
     }
+}
 
-    .social {
-        font-size: 1.5rem;
-    }
+.social {
+    font-size: 1.5rem;
 }
 
 
