--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6430,7 +6430,7 @@ readers do not read off random characters that represent icons */
   border: 0 none;
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", serif;
 }
 
 html, body {
@@ -6444,11 +6444,17 @@ p, td, th, li, dd {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #d3d0d0;
+  color: #d9d8d8;
   margin-bottom: 0.6em;
   font-weight: bold;
   font-family: "Titillium Web";
   letter-spacing: 0.2rem;
+}
+
+hr {
+  padding: 1pt;
+  background-color: #313730;
+  margin: 2rem 0;
 }
 
 .header {
@@ -6468,8 +6474,10 @@ p {
 
 ol, ul {
   padding-left: 1.5em;
-  margin-bottom: 1rem ul;
-  margin-bottom-list-style-type: disclosure-closed;
+  margin-bottom: 1rem;
+}
+ol ul, ul ul {
+  list-style-type: disclosure-closed;
 }
 
 .hidden {
@@ -6486,7 +6494,11 @@ body {
   line-height: 1.4;
 }
 body a {
-  color: #ca8606;
+  color: #d3d0d0;
+}
+
+img {
+  max-width: 100%;
 }
 
 .main {
@@ -6507,6 +6519,16 @@ body a {
   margin: 1rem 0;
   border: 1px solid #333;
   max-width: 100%;
+}
+
+.colors table {
+  background-color: transparent;
+  border-spacing: 4px;
+  border-collapse: separate;
+}
+.colors td {
+  border: 0;
+  height: 50px;
 }
 
 img {
@@ -6541,7 +6563,8 @@ img {
 .footer a:hover {
   color: #ca8606;
 }
-.footer .social {
+
+.social {
   font-size: 1.5rem;
 }
 
@@ -6566,6 +6589,9 @@ img {
   color: #d3d0d0;
   text-decoration: none;
 }
+.header a:hover {
+  color: #ca8606;
+}
 .header img {
   width: 100px;
 }
@@ -6589,7 +6615,7 @@ code {
   padding: 0.1em 0.2em;
   border-radius: 0.1em;
   border: 1px solid #463e3e;
-  background: #303437;
+  background: #333;
   font-family: monospace;
   font-size: 0.85rem;
   line-height: 1.9824;
@@ -6600,7 +6626,7 @@ pre {
   padding: 0 1em;
   border: 1px solid #463e3e;
   border-radius: 0.1em;
-  background: #303437;
+  background: #333;
   margin: 1rem 0;
 }
 pre code {
@@ -6639,10 +6665,6 @@ blockquote {
 .nav ul li {
   padding: 0 1em;
 }
-.nav a:hover {
-  color: #ca8606;
-}
-
 .nav-toggle {
   display: none;
 }
@@ -6688,11 +6710,11 @@ table {
   width: 100%;
   font-size: 0.9rem;
   margin-bottom: 1rem;
-  background-color: #36393c;
+  background-color: #333;
 }
 
 th {
-  background-color: #2c3e50;
+  background-color: #17272B;
   text-align: left;
   padding: 0.5rem;
   font-family: "Titillium Web";
@@ -6700,12 +6722,12 @@ th {
 }
 
 td {
-  border: 1px solid #182628;
+  border: 1px solid #17272B;
   padding: 0.5rem;
 }
 
 tr:nth-child(even) {
-  background-color: #464748;
+  background-color: #333;
 }
 
 /** base.scss */
@@ -6751,14 +6773,16 @@ tr:nth-child(even) {
 
 /** set box links background and hover color  */
 .box:nth-child(2) a {
-  background-color: #303437;
+  background-color: #313730;
+  color: #a1af7a;
 }
 .box:nth-child(2) a:hover {
-  background-color: #393e42;
+  background-color: #3b4239;
 }
 
 .box:nth-child(3) a {
   background-color: #121617;
+  color: #8c8c83;
 }
 .box:nth-child(3) a:hover {
   background-color: #1c2324;
@@ -6766,6 +6790,7 @@ tr:nth-child(even) {
 
 .box:nth-child(4) a {
   background-color: #42341a;
+  color: #a29378;
 }
 .box:nth-child(4) a:hover {
   background-color: #514020;
@@ -6773,6 +6798,7 @@ tr:nth-child(even) {
 
 .box:nth-child(5) a {
   background-color: #17272B;
+  color: #72818e;
 }
 .box:nth-child(5) a:hover {
   background-color: #1f3439;
@@ -6780,20 +6806,23 @@ tr:nth-child(even) {
 
 .box:nth-child(6) a {
   background-color: #312121;
+  color: #866b73;
 }
 .box:nth-child(6) a:hover {
   background-color: #3e2a2a;
 }
 
 .box:nth-child(7) a {
-  background-color: #303437;
+  background-color: #313730;
+  color: #a1af7a;
 }
 .box:nth-child(7) a:hover {
-  background-color: #393e42;
+  background-color: #3b4239;
 }
 
 .box:nth-child(8) a {
   background-color: #121617;
+  color: #8c8c83;
 }
 .box:nth-child(8) a:hover {
   background-color: #1c2324;
@@ -6854,14 +6883,16 @@ tr:nth-child(even) {
 
 /** set links background and hover color  */
 .techlink:nth-child(1) a {
-  background-color: #303437;
+  background-color: #313730;
+  color: #a1af7a;
 }
 .techlink:nth-child(1) a:hover {
-  background-color: #565d62;
+  background-color: #586256;
 }
 
 .techlink:nth-child(2) a {
   background-color: #121617;
+  color: #8c8c83;
 }
 .techlink:nth-child(2) a:hover {
   background-color: #3b484c;
@@ -6869,6 +6900,7 @@ tr:nth-child(even) {
 
 .techlink:nth-child(3) a {
   background-color: #42341a;
+  color: #a29378;
 }
 .techlink:nth-child(3) a:hover {
   background-color: #7e6332;
@@ -6876,6 +6908,7 @@ tr:nth-child(even) {
 
 .techlink:nth-child(4) a {
   background-color: #17272B;
+  color: #72818e;
 }
 .techlink:nth-child(4) a:hover {
   background-color: #365b65;
@@ -6883,20 +6916,23 @@ tr:nth-child(even) {
 
 .techlink:nth-child(5) a {
   background-color: #312121;
+  color: #866b73;
 }
 .techlink:nth-child(5) a:hover {
   background-color: #644343;
 }
 
 .techlink:nth-child(6) a {
-  background-color: #303437;
+  background-color: #313730;
+  color: #a1af7a;
 }
 .techlink:nth-child(6) a:hover {
-  background-color: #565d62;
+  background-color: #586256;
 }
 
 .techlink:nth-child(7) a {
   background-color: #121617;
+  color: #8c8c83;
 }
 .techlink:nth-child(7) a:hover {
   background-color: #3b484c;
@@ -6904,6 +6940,7 @@ tr:nth-child(even) {
 
 .techlink:nth-child(8) a {
   background-color: #42341a;
+  color: #a29378;
 }
 .techlink:nth-child(8) a:hover {
   background-color: #7e6332;
@@ -6911,6 +6948,7 @@ tr:nth-child(even) {
 
 .techlink:nth-child(9) a {
   background-color: #17272B;
+  color: #72818e;
 }
 .techlink:nth-child(9) a:hover {
   background-color: #365b65;
@@ -6918,6 +6956,7 @@ tr:nth-child(even) {
 
 .techlink:nth-child(10) a {
   background-color: #312121;
+  color: #866b73;
 }
 .techlink:nth-child(10) a:hover {
   background-color: #644343;
@@ -6948,27 +6987,6 @@ tr:nth-child(even) {
     display: none;
   }
 }
-/** base.scss */
-/* report.scss */
-.reports {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #17272B;
-  border-radius: 10px;
-  border: 1px solid #333;
-}
-.reports a {
-  color: #d3d0d0;
-  text-decoration: none;
-  letter-spacing: 0.3rem;
-  padding: 0.5rem;
-}
-.reports a:hover {
-  background-color: #121f22;
-  color: #d3d0d0;
-}
-
 /* @use 'components' as comp with (
     $theme: 'dark'
 ); */
