--- a/themes/kmom02/incl/nav.twig
+++ b/themes/kmom02/incl/nav.twig
@@ -34,7 +34,18 @@
                         </a>
                     </li>
                 {% endfor %}
+
+                {% for theme in pages["_meta"].meta.Theme %}
+                    <li>
+                        <a target="{{ theme.target }}" href="{{ theme.url }}" title="{{ theme.title }}" role="button">
+                            <i class="{{ theme.icon }}" aria-hidden="true"></i>
+                            <span class="sr-only">{{ theme.title }}</span>
+                        </a>
+                    </li>
+                {% endfor %}
+
             </ul>
         </div>
     </div>
+
 </div>
