--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6531,10 +6531,11 @@ img {
   height: 50px;
 }
 
-img {
-  filter: brightness(0.5) contrast(1.1);
-}
-
+/* @if $theme == 'dark' {
+    img {
+        filter: brightness(0.7) contrast(1);
+    }
+} */
 @media (max-width: 500px) {
   .main {
     width: 95%;
@@ -6580,7 +6581,7 @@ img {
   background-color: #1E1E1E;
 }
 .header .title, .header .logo {
-  padding: 1rem;
+  padding: 0.5rem;
 }
 .header h1 {
   margin-top: 0;
@@ -6594,6 +6595,8 @@ img {
 }
 .header img {
   width: 100px;
+  min-width: 75px;
+  aspect-ratio: 1/1;
 }
 
 .site-header {
@@ -6605,9 +6608,19 @@ img {
 .logotitle {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
+@media (max-width: 500px) {
+  .header img {
+    width: 75px;
+  }
+}
+@media (max-width: 380px) {
+  .logotitle {
+    align-items: center;
+  }
+}
 /* Code */
 /* $theme: 'light' !default; */
 code {
@@ -6661,6 +6674,7 @@ blockquote {
   align-items: center;
   padding: 1em 0;
   list-style: none;
+  flex-wrap: wrap;
 }
 .nav ul li {
   padding: 0 1em;
@@ -6758,7 +6772,7 @@ tr:nth-child(even) {
   border-radius: 10px;
   border-right: #333;
   border-bottom: #333;
-  box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.9098039216);
+  box-shadow: 3px 3px 3px #000;
   color: #d3d0d0;
   font-size: 2rem;
   text-decoration: none;
@@ -6868,7 +6882,7 @@ tr:nth-child(even) {
   border-radius: 10px;
   border-right: #333;
   border-bottom: #333;
-  box-shadow: 3px 3px 3px rgba(51, 51, 51, 0.9098039216);
+  box-shadow: 3px 3px 3px #000;
   font-family: "Titillium Web";
   color: #d3d0d0;
   text-decoration: none;
@@ -6985,6 +6999,36 @@ tr:nth-child(even) {
   .techaside {
     grid-area: unset;
     display: none;
+  }
+}
+/** gallery.scss */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+}
+
+.gallery-item {
+  border: 1px solid red;
+}
+.gallery-item:hover {
+  border: 2px solid palegreen;
+}
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+}
+.gallery-item img:hover {
+  border: 2px solf pink;
+  filter: brightness(1.5) contrast(1);
+}
+.gallery-item a:hover {
+  background-color: transparent;
+}
+
+@media (max-width: 667px) {
+  .gallery {
+    grid-template-columns: 1fr;
   }
 }
 /* @use 'components' as comp with (
