--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6531,6 +6531,11 @@ img {
   height: 50px;
 }
 
+/* @if $theme == 'dark' {
+    img {
+        filter: brightness(0.7) contrast(1);
+    }
+} */
 @media (max-width: 500px) {
   .main {
     width: 95%;
@@ -6576,7 +6581,7 @@ img {
   background-color: #3C6975;
 }
 .header .title, .header .logo {
-  padding: 1rem;
+  padding: 0.5rem;
 }
 .header h1 {
   margin-top: 0;
@@ -6586,10 +6591,12 @@ img {
   text-decoration: none;
 }
 .header a:hover {
-  color: #2F98B5;
+  color: #f99428;
 }
 .header img {
   width: 100px;
+  min-width: 75px;
+  aspect-ratio: 1/1;
 }
 
 .site-header {
@@ -6601,9 +6608,19 @@ img {
 .logotitle {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
+@media (max-width: 500px) {
+  .header img {
+    width: 75px;
+  }
+}
+@media (max-width: 380px) {
+  .logotitle {
+    align-items: center;
+  }
+}
 /* Code */
 /* $theme: 'light' !default; */
 code {
@@ -6657,6 +6674,7 @@ blockquote {
   align-items: center;
   padding: 1em 0;
   list-style: none;
+  flex-wrap: wrap;
 }
 .nav ul li {
   padding: 0 1em;
@@ -6981,6 +6999,36 @@ tr:nth-child(even) {
   .techaside {
     grid-area: unset;
     display: none;
+  }
+}
+/** gallery.scss */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+}
+
+.gallery-item {
+  border: 1px solid red;
+}
+.gallery-item:hover {
+  border: 2px solid palegreen;
+}
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+}
+.gallery-item img:hover {
+  border: 2px solf pink;
+  filter: brightness(1.5) contrast(1);
+}
+.gallery-item a:hover {
+  background-color: transparent;
+}
+
+@media (max-width: 667px) {
+  .gallery {
+    grid-template-columns: 1fr;
   }
 }
 /* @use 'components' as comp with (
