--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -1,7 +1,7 @@
 <div class="footer">
-    <div>
-        En footer med lite text.
-    </div>
+    {# <div>
+        Bra länkar
+    </div> #}
     <div class="social">
         {% for social in pages["_meta"].meta.social %}
         <a target="{{ social.target }}" href="{{ social.url }}" title="{{ social.title }}" role="button">
