--- a/themes/kmom02/scss/base/_base.scss
+++ b/themes/kmom02/scss/base/_base.scss
@@ -94,12 +94,17 @@ body {
     @include mix.flex-container(space-between, stretch);
     flex-direction: column;
     background-color: $background-color;
+    /* background-color: #43667A;
+    background-image: url(../../../assets/img/bg_sunset.png);
+    background-repeat: no-repeat;
+    background-size: cover; */
     color: $font-color;
-    line-height: 1.4;
+    line-height: 1.5;
 
 
     a {
         color: $main-link-color;
+
     }
 }
 
@@ -113,20 +118,20 @@ img {
     margin: 0 auto;
     width: 80%;
     max-width: 800px;
+    border-radius: 10px;
+
+    h1 {
+        letter-spacing: 0.3rem;
+        text-align: center;
+    }
 
     a:hover {
         color: $background-color;
         background-color: $hover-color;
         text-decoration: none;
+        transition: all 0.3s ease;
     }
 
-    .me {
-        width: 250px;
-        border-radius: 5px;
-        margin: 1rem 0;
-        border: $border-dark-grey;
-        max-width: 100%;
-    }
 }
 
 .colors {
@@ -143,12 +148,51 @@ img {
 }
 
 
+.startframe {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+
+    picture {
+        flex: 1;
+        position: relative;
+    }
+
+    img {
+        //border: 4px solid #74A69E;//$border-dark-grey;
+        border-radius: 50%;
+        box-shadow: 0 0 300px 50px rgba(56, 110, 101, 0.89);
+        z-index: 2;
+    }
+
+    div {
+        flex: 1;
+        z-index: 3;
+    }
+}
+
+
 // If dark theme, set image filter
-/* @if $theme == 'dark' {
+@if $theme == 'dark' {
     img {
         filter: brightness(0.7) contrast(1);
     }
-} */
+}
+
+
+@media (max-width: 750px) {
+    .startframe {
+        flex-direction: column;
+
+        img {
+            border: 0;
+            border-radius: 10px;
+            box-shadow: 10px 10px 200px 5px rgba(50,109,100, .8901960784);
+        }
+    }
+}
+
+
 
 @media (max-width: 500px) {
     .main {
