--- a/themes/kmom02/scss/components/_analysis.scss
+++ b/themes/kmom02/scss/components/_analysis.scss
@@ -19,3 +19,20 @@
 .load{
     height: 600px;
 }
+
+.report img{
+    margin-bottom: 1rem;
+}
+
+.column2 {
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+@media (max-width: 800px) {
+    .column2 {
+        flex-direction: column;
+    }
+}
