--- a/themes/kmom02/scss/components/_technology.scss
+++ b/themes/kmom02/scss/components/_technology.scss
@@ -36,12 +36,13 @@ $box-font-color-hover: map.get(settings.$colors, 'box-hover-font-color');
         @include mix.flex-center;
         @include  mix.box-border;
         color: $box-font-color;
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-decoration: none;
         font-family: map.get(settings.$fonts, 'label-font');
         padding: 0.5rem;
         word-break: break-all;
         text-align: center;
+        transition: color 0.3s ease;
     }
 
     a:hover {
